...
                Button(action: {
                    self.isPresentingAddTaskTargetSetPopup = true
                }, label: {
                    Image(systemName: "plus.circle")
                        .resizable()
                        .frame(width: 30, height: 30, alignment: .center)
                        .accessibility(identifier: "add-task-target-set-button")
                })
                .foregroundColor(themeManager.panelContent)
                .sheet(isPresented: self.$isPresentingAddTaskTargetSetPopup, content: {
                    TaskTargetSetPopup.init(title: "Add Target Set",
                                            isBeingPresented: self.$isPresentingAddTaskTargetSetPopup,
                                            save: {
                                                ttsv in self.taskTargetSetViews.append(ttsv)
                                            })
                })
            }
...
