...
                    Text("Tag search")
                        .font(.title)
                    Spacer()
                    
                    Button(action: {
                        
                        guard let tag = selectedTag else {
                            self.errorMessage = "Please select a Tag"
                            return
                        }
                        
                        if let addTagErrorMessage = self.addTag(tag._name) {
                            self.errorMessage = addTagErrorMessage
...
                    .disabled(selectedTag == nil)
                    .foregroundColor(.accentColor)
                    .accessibility(identifier: "search-tag-popup-done-button")
                }
            }
            
            LabelAndTextFieldSection(label: nil, labelIdentifier: "", placeHolder: "Tag name", textField: self.$tagText, textFieldIdentifier: "search-tag-popup-text-field")
            
            if errorMessage.count > 0 {
                Text(errorMessage)
                    .foregroundColor(.red)
            }
            
...
