...
                .keyboardType( .decimalPad )
                .padding(10)
                .border(Color.primary, width: 2)
                .background(self.maxOperator == .eq || self.minOperator == .na ? themeManager.disabledTextField : Color(UIColor.systemBackground))
                .foregroundColor(self.maxOperator == .eq || self.minOperator == .na ? themeManager.disabledTextFieldText : .primary)
                .cornerRadius(3)
                .accessibility(identifier: "minimum-value")
            
            Picker("Low op", selection: self.$minOperator) {
                ForEach(SaveFormatter.equalityOperator.allCases, id: \.self) { op in
                    Text(op.stringValue)
                }
            }
...
